Dark mode fix

--- a/src/components/links/link-item/link-item.component.scss
+++ b/src/components/links/link-item/link-item.component.scss
@@ -1,5 +1,6 @@
 .link-item {
   background-color: var(--component-background-color);
+  color: var(--component-color);
   border-bottom: 1px solid var(--ion-color-light-shade);
 
   .link-item-header {
@@ -14,6 +15,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
+        color: var(--component-color);
       }
     }
 
@@ -24,5 +26,6 @@
 
   .link-item-settings {
     padding: 10px;
+    color: var(--component-color);
   }
 }
